updated: test.config

--- a/sarek/test.config
+++ b/sarek/test.config
@@ -5,8 +5,8 @@ Uses S3-hosted test inputs and disables remote lookups.
 
 params {
     // Offline inputs (S3 CSV produced by this script)
-    //input = 's3://lifebit-user-data-nextflow/offline/sarek/data/inputs3.csv'
     input = 's3://lifebit-user-data-nextflow/offline/sarek/data/inputs3.csv'
+    //input = 's3://lifebit-user-data-nextflow/offline/rnaseq/data/inputs3.csv'
     outdir        = '/tmp/out-sarek'
 
     fasta = 's3://lifebit-user-data-nextflow/offline/sarek/data/genome.fasta'
@@ -24,8 +24,11 @@ params {
     // Offline toggles
     genome                         = null
     igenomes_ignore                = true
-    pipelines_testdata_base_path   = ''
-    custom_config_base             = ''
+    custom_config_version          = null
+    pipelines_testdata_base_path   = null
+    custom_config_base             = null
+    //pipelines_testdata_base_path   = ''
+    //custom_config_base             = ''
     validate_params                = false
 
     // Other parameters
@@ -35,6 +38,7 @@ params {
     skip_alignment           = true
     pseudo_aligner      = 'salmon'
     umitools_bc_pattern = 'NNNN'
+
 }
 
 // When using RSEM, remove warning from STAR whilst building tiny indices
