--- a/sarek/test.config
+++ b/sarek/test.config
@@ -9,8 +9,6 @@ params {
     //input = 's3://lifebit-user-data-nextflow/offline/rnaseq/data/inputs3.csv'
     outdir        = '/tmp/out-sarek'
 
-    fasta = 's3://lifebit-user-data-nextflow/offline/sarek/data/genome.fasta'
-    gtf   = 's3://lifebit-user-data-nextflow/offline/sarek/data/genes_with_empty_tid.gtf.gz'
 
     config_profile_name        = 'Offline test profile'
     config_profile_description = 'Minimal offline test dataset to check pipeline function'
@@ -31,21 +29,15 @@ params {
     //custom_config_base             = ''
     validate_params                = false
 
-    // Other parameters
-    //skip_bbsplit        = false
-    skip_bbsplit        = true
-    skip_pseudo_alignment    = true
-    skip_alignment           = true
-    pseudo_aligner      = 'salmon'
-    umitools_bc_pattern = 'NNNN'
-
-}
-
-// When using RSEM, remove warning from STAR whilst building tiny indices
-process {
-    withName: 'RSEM_PREPAREREFERENCE_GENOME' {
-        ext.args2 = "--genomeSAindexNbases 7"
-    }
+//        dbsnp = "./data/dbsnp_146.hg38.vcf.gz"
+//        fasta = "./data/genome.fasta"
+//      intervals = "./data/genome.multi_intervals.bed"
+        skip_tools = "bqsr"
+        skip_tools = "baserecalibrator"
+//      skip_tools = "baserecalibrator,markduplicates,bqsr"
+        only_paired_variant_calling =  true
+        genome = null
+        no_intervals = true
 }
 
 docker.registry = "nexus-docker-quay.ship.gov.sg"
